--- a/views/rentals/new.ejs
+++ b/views/rentals/new.ejs
@@ -1,29 +1,37 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Rental</title>
-</head>
-<body>
-    <form action="/rentals" method="post">
-        <div>
-            <label for="title">Title</label>
-            <input type="text" id="title" name="lodge[title]">
-        </div>
-        <div>
-            <label for="location">Location</label>
-            <input type="text" id="location" name="lodge[location]">
-        </div>
-        <div>
-            <label for="description">Description</label>
-            <input type="text" id="description" name="lodge[description]">
-        </div>
-        <button>Add Rental</button>
-    </form>
-    <footer>
+<% layout('layouts/boilerplate')%>
+<div class="row">
+    <h1 class="text-center">New Rental</h1>
+    <div class="col-6 offset-3">
+        <form action="/rentals" method="POST">
+            <div class="mb-3">
+                <label class="form-label" for="title">Title</label>
+                <input class="form-control" type="text" id="title" name="lodge[title]">
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="location">Location</label>
+                <input class="form-control" type="text" id="location" name="lodge[location]">
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="image">Image Url</label>
+                <input class="form-control" type="text" id="image" name="lodge[image]">
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="price">Rental Price</label>
+                <div class="input-group">
+                    <span class="input-group-text" id="price-label">₹</span>
+                    <input type="text" class="form-control" id="price" placeholder="0.00" aria-label="price"
+                        aria-describedby="price-label" name="lodge[price]">
+                </div>
+            </div>
+
+            <div class="mb-3">
+                <label class="form-label" for="description">Description</label>
+                <textarea class="form-control" type="text" id="description" name="lodge[description]"></textarea>
+            </div>
+            <div class="mb-3">
+                <button class="btn btn-success">Add Rental</button>
+            </div>
+        </form>
         <a href="/rentals">All Rentals</a>
-    </footer>
-</body>
-</html>
+    </div>
+</div>
