--- a/views/rentals/show.ejs
+++ b/views/rentals/show.ejs
@@ -1,21 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= lodge.title %></title>
-</head>
-<body>
-    <h1> <%= lodge.title %></h1>
-    <h2><%= lodge.location %></h2>
-    <p><%= lodge.description %></p>
-    <a href="/rentals/<%= lodge._id %>/edit">Edit</a>
-    <form action="/rentals/<%= lodge._id %>?_method=DELETE" method="post">
-        <button>Delete Rental</button>
-    </form>
-    <footer>
-        <a href="/rentals">All Rentals</a>
-    </footer>
-</body>
-</html>
+<% layout('layouts/boilerplate')%>
+
+<div class="row">
+    <div class="col-6 offset-3">
+        <div class="card mb-3">
+            <img src="<%= lodge.image%>" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title"><%= lodge.title%></h5>
+                <p class="card-text"><%= lodge.description%></p>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item text-muted"><%= lodge.location%></li>
+                <li class="list-group-item">₹<%= lodge.price%>/night</li>
+            </ul>
+            <div class="card-body">
+                <a class="card-link btn btn-info" href="/rentals/<%=lodge._id%>/edit">Edit</a>
+                <form class="d-inline" action="/rentals/<%=lodge._id%>?_method=DELETE" method="POST">
+                    <button class="btn btn-danger">Delete</button>
+                </form>
+            </div>
+            <div class="card-footer text-muted">
+                2 days ago
+            </div>
+        </div>
+    </div>
+</div>
