--- a/views/rentals/edit.ejs
+++ b/views/rentals/edit.ejs
@@ -2,35 +2,35 @@
 <div class="row">
     <h1 class="text-center">Edit Rental</h1>
     <div class="col-6 offset-3">
-        <form action="/rentals/<%=lodge._id%>?_method=PUT" method="POST">
+        <form action="/rentals/<%=lodge._id%>?_method=PUT" method="POST" class="needs-validation" novalidate>
             <div class="mb-3">
                 <label class="form-label" for="title">Title</label>
                 <input class="form-control" type="text" id="title" name="lodge[title]"
-                    value="<%=lodge.title %>">
+                    value="<%=lodge.title %>" required>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="location">Location</label>
                 <input class="form-control" type="text" id="location" name="lodge[location]"
-                    value="<%=lodge.location %>">
+                    value="<%=lodge.location %>" required>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="image">Image Url</label>
                 <input class="form-control" type="text" id="image" name="lodge[image]"
-                    value="<%=lodge.image %>">
+                    value="<%=lodge.image %>" required>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="price">Rental Price</label>
                 <div class="input-group">
                     <span class="input-group-text" id="price-label">$</span>
                     <input type="text" class="form-control" id="price" placeholder="0.00" aria-label="price"
-                        aria-describedby="price-label" name="lodge[price]" value="<%=lodge.price %>">
+                        aria-describedby="price-label" name="lodge[price]" value="<%=lodge.price %>" required>
                 </div>
             </div>
 
             <div class="mb-3">
                 <label class="form-label" for="description">Description</label>
                 <textarea class="form-control" type="text" id="description"
-                    name="lodge[description]"><%= lodge.description%></textarea>
+                    name="lodge[description]" required><%= lodge.description%></textarea>
             </div>
             <div class="mb-3">
                 <button class="btn btn-info">Update Rental</button>
