--- a/views/rentals/show.ejs
+++ b/views/rentals/show.ejs
@@ -10,20 +10,24 @@
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item text-muted"><%= lodge.location%></li>
+                <li class="list-group-item">Listed by <%= lodge.author.username%></li>
                 <li class="list-group-item">₹<%= lodge.price%>/night</li>
             </ul>
+            <%  if( currentUser && lodge.author.equals(currentUser._id))  {%>
             <div class="card-body">
                 <a class="card-link btn btn-info" href="/rentals/<%=lodge._id%>/edit">Edit</a>
                 <form class="d-inline" action="/rentals/<%=lodge._id%>?_method=DELETE" method="POST">
                     <button class="btn btn-danger">Delete</button>
                 </form>
             </div>
+            <% } %>
             <div class="card-footer text-muted">
                 2 days ago
             </div>
         </div>
     </div>
     <div class="col-6">
+        <% if(currentUser){ %>
         <h2>Leave a Review</h2>
         <form action="/rentals/<%=lodge._id%>/reviews" method="POST" class="mb-3 needs-validation" novalidate>
             <div class="mb-3">
@@ -39,14 +43,18 @@
             </div>
             <button class="btn btn-success">Submit</button>
         </form>
+        <% } %>
         <% for(let review of lodge.reviews) { %>
         <div class="card mb-3 ">
             <div class="card-body">
+                <h6 class="card-subtitle mb-2 text-muted"><%= review.author.username%></h6>
                 <h5 class="card-title">Rating: <%= review.rating %></h5>
                 <p class="card-text">Review: <%= review.body %></p>
+                <%  if( currentUser && review.author.equals(currentUser._id))  { %>
                 <form action="/rentals/<%=lodge._id%>/reviews/<%=review._id%>?_method=DELETE" method="POST">
                     <button class="btn btn-sm btn-danger">Delete</button>
                 </form>
+                <% } %>
             </div>
         </div>
         <% } %>
