--- a/views/rentals/edit.ejs
+++ b/views/rentals/edit.ejs
@@ -2,7 +2,7 @@
 <div class="row">
     <h1 class="text-center">Edit Rental</h1>
     <div class="col-6 offset-3">
-        <form action="/rentals/<%=lodge._id%>?_method=PUT" method="POST" class="needs-validation" novalidate>
+        <form action="/rentals/<%=lodge._id%>?_method=PUT" method="POST" class="needs-validation" enctype="multipart/form-data" novalidate>
             <div class="mb-3">
                 <label class="form-label" for="title">Title</label>
                 <input class="form-control" type="text" id="title" name="lodge[title]"
@@ -12,11 +12,6 @@
                 <label class="form-label" for="location">Location</label>
                 <input class="form-control" type="text" id="location" name="lodge[location]"
                     value="<%=lodge.location %>" required>
-            </div>
-            <div class="mb-3">
-                <label class="form-label" for="image">Image Url</label>
-                <input class="form-control" type="text" id="image" name="lodge[image]"
-                    value="<%=lodge.image %>" required>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="price">Rental Price</label>
@@ -31,6 +26,33 @@
                 <label class="form-label" for="description">Description</label>
                 <textarea class="form-control" type="text" id="description"
                     name="lodge[description]" required><%= lodge.description%></textarea>
+            </div>
+            <div class="mb-3">
+                <div class="form-file custom-file">
+                    <input type="file" class="form-file-input" id="image" name="image" multiple>
+                    <label class="form-file-label" for="image">
+                        <span class="form-file-text custom-file-label">Add more image(s)...</span>
+                        <span class="form-file-button">Browse</span>
+                    </label>
+                </div>
+            </div>
+            <div class="mb-3">
+                <h6>Delete Image(s): </h6>
+                <div class="row row-cols-1 row-cols-md-4 g-4 mb-3">
+                    <% lodge.images.forEach((image, i) => { %>
+                    <div class="col">
+                        <div class="card">
+                            <label for="image-<%= i %>"><img class="card-img" src="<%= image.thumbnail %>" alt="">
+                                <div class="card-img-overlay text-end pt-1 pe-2">
+                                    <input class="form-check-input" type="checkbox" name="deleteImages[]"
+                                        value="<%= image.filename %>" id="image-<%= i %>">
+                                </div>
+                            </label>
+                        </div>
+                    </div>
+                    <% }) %>
+                </div>
+
             </div>
             <div class="mb-3">
                 <button class="btn btn-info">Update Rental</button>
