--- a/views/rentals/index.ejs
+++ b/views/rentals/index.ejs
@@ -6,9 +6,9 @@
 </div>
 <% for (let lodge of lodgeList){%>
 <div class="card" mb-3>
-    <div class="row">
+    <div class="row mb-3">
         <div class="col-md-4">
-            <img class="img-fluid" alt="" src="<%=lodge.image%>">
+            <img class="img-fluid" alt="" src="<%=lodge.images[0].url%>">
         </div>
         <div class="col-md-8">
             <div class="card-body">
