--- a/views/rentals/new.ejs
+++ b/views/rentals/new.ejs
@@ -2,7 +2,7 @@
 <div class="row">
     <h1 class="text-center">New Rental</h1>
     <div class="col-6 offset-3">
-        <form action="/rentals" method="POST" class="needs-validation" novalidate>
+        <form action="/rentals" method="POST" class="needs-validation" enctype="multipart/form-data" novalidate>
             <div class="mb-3">
                 <label class="form-label" for="title">Title</label>
                 <input class="form-control" type="text" id="title" name="lodge[title]" required>
@@ -11,10 +11,10 @@
                 <label class="form-label" for="location">Location</label>
                 <input class="form-control" type="text" id="location" name="lodge[location]" required>
             </div>
-            <div class="mb-3">
+            <!-- <div class="mb-3">
                 <label class="form-label" for="image">Image Url</label>
                 <input class="form-control" type="text" id="image" name="lodge[image]" required>
-            </div>
+            </div> -->
             <div class="mb-3">
                 <label class="form-label" for="price">Rental Price</label>
                 <div class="input-group">
@@ -27,6 +27,15 @@
             <div class="mb-3">
                 <label class="form-label" for="description">Description</label>
                 <textarea class="form-control" type="text" id="description" name="lodge[description]" required></textarea>
+            </div>
+            <div class="mb-3">
+                <div class="form-file custom-file">
+                    <input type="file" class="form-file-input" id="image" name="image" multiple>
+                    <label class="form-file-label" for="image">
+                        <span class="form-file-text custom-file-label">Choose image(s)...</span>
+                        <span class="form-file-button">Browse</span>
+                    </label>
+                </div>
             </div>
             <div class="mb-3">
                 <button class="btn btn-success">Add Rental</button>
